# esoeproject

./: .gitignore  .gitmodules  build.gradle  settings.gradle
modspep/: .cdtbuild  .cdtproject  .cproject  .project  Makefile.am  Makefile.in  NOTICE  README  SConstruct  apache-module-conf  configure.ac
modspep/include/: APRDefinitions.h  APRFileLogger.h  Common.h  Cookies.h  Makefile.am  ModuleConstants.h  RequestHandler.h  RequestParameters.h  SSOHandler.h  WSHandler.h
modspep/includes/: APRDefinitions.h  APRFileLogger.h  Base64.h  Common.h  Cookies.h  ModuleConstants.h  RequestHandler.h  RequestParameters.h  SSOHandler.h  WSHandler.h
modspep/src/: APRFileLogger.cpp  Base64.cpp  Common.cpp  Cookies.cpp  Makefile.am  RequestHandler.cpp  RequestParameters.cpp  SSOHandler.cpp  WSHandler.cpp
modspep/src/versions/: apache-13.cpp  apache-20.cpp  apache-2x.cpp
modspep/w32/vc8/: modspep.sln  modspep.vcproj
saml2cpp/: .cdtbuild  .cdtproject  .cproject  .project  AUTHORS  Makefile.am  Makefile.in  NOTICE  README  README.W32  SConstruct  command.txt  configure.ac  resource.h  saml2cpp.rc  valgrindsuppresions.txt
saml2cpp/include/: Makefile.am
saml2cpp/include/saml2/: SAML2Defs.h
saml2cpp/includes/: SAML2Defs.h
saml2cpp/includes/constants/: AttributeFormatConstants.h  AuthenticationContextConstants.h  BindingConstants.h  ConfirmationMethodConstants.h  ConsentIdentifierConstants.h  NameIDFormatConstants.h  ProtocolConstants.h  StatusCodeConstants.h  VersionConstants.h
saml2cpp/includes/exceptions/: IdentifierCacheException.h  IdentifierException.h  InvalidParameterException.h  InvalidSAMLAssertionException.h  InvalidSAMLAuthnRequestException.h  InvalidSAMLRequestException.h  InvalidSAMLResponseException.h  MarshallerException.h  UnmarshallerException.h
saml2cpp/includes/handlers/: Marshaller.h  MetadataOutput.h  SAML2ErrorHandler.h  SAMLDocument.h  Unmarshaller.h
saml2cpp/includes/identifier/: IdentifierCache.h  IdentifierGenerator.h
saml2cpp/includes/namespace/: NamespacePrefixMapper.h
saml2cpp/includes/resolver/: ExternalKeyResolver.h  ResourceResolver.h
saml2cpp/includes/validator/: SAMLAssertionValidator.h  SAMLAuthnRequestValidator.h  SAMLRequestValidator.h  SAMLResponseValidator.h  SAMLValidator.h
saml2cpp/includes/xsd/: xml-schema-custom-attributevaluetype.h  xml-schema-custom.h  xml-schema.hxx
saml2cpp/schema/: Makefile.am  attributeconfig-schema.xsd  cacheclear-schema-saml-metadata.xsd  delegated-schema-saml-protocol.xsd  esoe-schema-saml-protocol.xsd  lxacml-schema-context.xsd  lxacml-schema-grouptarget.xsd  lxacml-schema-metadata.xsd  lxacml-schema-saml-assertion.xsd  lxacml-schema-saml-protocol.xsd  lxacml-schema.xsd  saml-schema-assertion-2.0.xsd  sessiondata-schema.xsd  soap-1.2-envelope.xsd  spepstartup-schema-saml-metadata.xsd  xenc-schema.xsd  xmldsig-core-schema.xsd
saml2cpp/src/: Makefile.am
saml2cpp/src-gen/: attributeconfig-schema.cxx  attributeconfig-schema.hxx  cacheclear-schema-saml-metadata.cxx  cacheclear-schema-saml-metadata.hxx  delegated-schema-saml-protocol.cxx  delegated-schema-saml-protocol.hxx  esoe-schema-saml-protocol.cxx  esoe-schema-saml-protocol.hxx  lxacml-schema-context.cxx  lxacml-schema-context.hxx  lxacml-schema-grouptarget.cxx  lxacml-schema-grouptarget.hxx  lxacml-schema-metadata.cxx  lxacml-schema-metadata.hxx  lxacml-schema-saml-assertion.cxx  lxacml-schema-saml-assertion.hxx  lxacml-schema-saml-protocol.cxx  lxacml-schema-saml-protocol.hxx  lxacml-schema.cxx  lxacml-schema.hxx  saml-schema-assertion-2.0.cxx  saml-schema-assertion-2.0.hxx  saml-schema-metadata-2.0.cxx  saml-schema-metadata-2.0.hxx  saml-schema-protocol-2.0.cxx  saml-schema-protocol-2.0.hxx  sessiondata-schema.cxx  sessiondata-schema.hxx  spepstartup-schema-saml-metadata.cxx  spepstartup-schema-saml-metadata.hxx  xenc-schema.cxx  xenc-schema.hxx  xml-unicode.hxx  xml.cxx  xml.hxx  xmldsig-core-schema.cxx  xmldsig-core-schema.hxx
saml2cpp/src/exceptions/: IdentifierCacheException.cpp  IdentifierException.cpp  InvalidParameterException.cpp  InvalidSAMLAssertionException.cpp  InvalidSAMLAuthnRequestException.cpp  InvalidSAMLRequestException.cpp  InvalidSAMLResponseException.cpp  MarshallerException.cpp  UnmarshallerException.cpp
saml2cpp/src/handlers/: MetadataOutput.cpp  SAML2ErrorHandler.cpp
saml2cpp/src/identifier/: IdentifierCache.cpp  IdentifierGenerator.cpp
saml2cpp/src/namespace/: NamespacePrefixMapper.cpp
saml2cpp/src/resolver/: ResourceResolver.cpp
saml2cpp/src/validator/: SAMLAssertionValidator.cpp  SAMLAuthnRequestValidator.cpp  SAMLRequestValidator.cpp  SAMLResponseValidator.cpp  SAMLValidator.cpp
saml2cpp/src/xsd/: xml-schema-custom-attributevaluetype.cpp  xml-schema-custom.cpp
saml2cpp/w32/: xsd-2.3.1-msvc-dllexport.patch
saml2cpp/w32/vc8/: saml2.sln  saml2.vcproj
spepcpp/: .cdtbuild  .cdtproject  .cproject  .project  AUTHORS  Makefile.am  Makefile.in  NOTICE  README  SConstruct  configtest.pl  configure.ac  spep.conf  spep.conf.default  spep.rc  spepd-initscript  spepd-systemd-instance-unit  spepd-systemd-readme  spepd-systemd-unit
spepcpp/include/: Makefile.am
spepcpp/include/spep/: Base64.h  Exceptions.h  SPEP.h  UnicodeStringConversion.h  Util.h
spepcpp/includes/: SPEP.h  UnicodeStringConversion.h  Util.h
spepcpp/includes/attribute/: AttributeProcessor.h  AttributeProcessorData.h
spepcpp/includes/authn/: AuthnProcessor.h  AuthnProcessorData.h
spepcpp/src/: Makefile.am  SPEP.cpp  UnicodeStringConversion.cpp
spepcppdaemon/: .cproject  .project  Makefile.am  Makefile.in  NOTICE  README  SConstruct  configure.ac  spep.config  spepd.rc
spepcppdaemon/include/: Daemon.h  Makefile.am  StreamLogHandler.h
spepcppdaemon/includes/: StreamLogHandler.h
spepcppdaemon/src/: Daemon.cpp  Main.cpp  Makefile.am  StreamLogHandler.cpp
spepcpptest/: .cdtbuild  .cproject  .project  AUTHORS  Makefile.am  NOTICE  README  configure.ac
spepcpptest/data/: keytool-responses-metadata.txt  keytool-responses.txt
spepcpptest/include/: Makefile.am
spepcpptest/src/: .gitignore  Makefile.am  test.cpp
(+2425 files in other folders)
