saml2datadir = $(datadir)/saml2
saml2schemadir = $(saml2datadir)/schema
dist_saml2schema_DATA = lxacml-schema-saml-protocol.xsd \
esoe-schema-saml-protocol.xsd \
saml-schema-protocol-2.0.xsd \
sessiondata-schema.xsd \
lxacml-schema-grouptarget.xsd \
lxacml-schema.xsd \
spepstartup-schema-saml-metadata.xsd \
cacheclear-schema-saml-metadata.xsd \
lxacml-schema-saml-assertion.xsd \
saml-schema-metadata-2.0.xsd \
delegated-schema-saml-protocol.xsd \
xenc-schema.xsd \
saml-schema-assertion-2.0.xsd \
attributeconfig-schema.xsd \
xmldsig-core-schema.xsd \
lxacml-schema-context.xsd \
xml.xsd \
lxacml-schema-metadata.xsd \
soap-1.1-envelope.xsd \
soap-1.2-envelope.xsd

