
lib_LTLIBRARIES = libsaml2.la

libsaml2_la_LDFLAGS = $(AM_LDFLAGS) -release $(PACKAGE_VERSION)
libsaml2_la_SOURCES = saml2/resolver/ResourceResolver.cpp \
saml2/resolver/ExternalKeyResolver.cpp \
saml2/identifier/IdentifierCache.cpp \
saml2/identifier/IdentifierGenerator.cpp \
saml2/logging/api.cpp \
saml2/logging/LogLevel.cpp \
saml2/logging/Logger.cpp \
saml2/logging/LocalLogger.cpp \
saml2/logging/LogStreamMimic.cpp \
saml2/validator/SAMLAssertionValidator.cpp \
saml2/validator/SAMLAuthnRequestValidator.cpp \
saml2/validator/SAMLValidator.cpp \
saml2/validator/SAMLRequestValidator.cpp \
saml2/validator/SAMLResponseValidator.cpp \
saml2/handlers/SAML2ErrorHandler.cpp \
saml2/handlers/MetadataOutput.cpp \
saml2/xsd/xml-schema-custom-attributevaluetype.cpp \
saml2/xsd/xml-schema-custom.cpp \
saml2/exceptions/InvalidParameterException.cpp \
saml2/exceptions/InvalidSAMLResponseException.cpp \
saml2/exceptions/InvalidSAMLAuthnRequestException.cpp \
saml2/exceptions/IdentifierException.cpp \
saml2/exceptions/InvalidSAMLAssertionException.cpp \
saml2/exceptions/IdentifierCacheException.cpp \
saml2/exceptions/InvalidSAMLRequestException.cpp \
saml2/exceptions/MarshallerException.cpp \
saml2/exceptions/UnmarshallerException.cpp \
saml2/bindings/xenc-schema.cxx \
saml2/bindings/saml-schema-assertion-2.0.cxx \
saml2/bindings/attributeconfig-schema.cxx \
saml2/bindings/spepstartup-schema-saml-metadata.cxx \
saml2/bindings/delegated-schema-saml-protocol.cxx \
saml2/bindings/esoe-schema-saml-protocol.cxx \
saml2/bindings/xmldsig-core-schema.cxx \
saml2/bindings/lxacml-schema-metadata.cxx \
saml2/bindings/sessiondata-schema.cxx \
saml2/bindings/lxacml-schema-saml-protocol.cxx \
saml2/bindings/saml-schema-protocol-2.0.cxx \
saml2/bindings/xml.cxx \
saml2/bindings/lxacml-schema-context.cxx \
saml2/bindings/lxacml-schema-grouptarget.cxx \
saml2/bindings/lxacml-schema-saml-assertion.cxx \
saml2/bindings/saml-schema-metadata-2.0.cxx \
saml2/bindings/lxacml-schema.cxx \
saml2/bindings/cacheclear-schema-saml-metadata.cxx \
saml2/bindings/soap-1.1-envelope.cxx \
saml2/bindings/soap-1.2-envelope.cxx \
saml2/namespace/NamespacePrefixMapper.cpp
