## 

spepincludedir = $(includedir)/spep-$(VERSION)
nobase_spepinclude_HEADERS = spep/Util.h \
spep/pep/PolicyEnforcementProcessorData.h \
spep/pep/SessionGroupCache.h \
spep/pep/Decision.h \
spep/pep/PolicyEnforcementProcessor.h \
spep/pep/proxy/SessionGroupCacheDispatcher.h \
spep/pep/proxy/SessionGroupCacheProxy.h \
spep/pep/impl/SessionGroupCacheImpl.h \
spep/ws/WSProcessor.h \
spep/ws/WSClient.h \
spep/ws/WSProcessorData.h \
spep/ws/SOAPUtil.h \
spep/identifier/proxy/IdentifierCacheDispatcher.h \
spep/identifier/proxy/IdentifierCacheProxy.h \
spep/authn/AuthnProcessor.h \
spep/authn/AuthnProcessorData.h \
spep/config/SPEPConfigData.h \
spep/config/proxy/ConfigurationProxy.h \
spep/config/proxy/ConfigurationDispatcher.h \
spep/config/Configuration.h \
spep/config/ConfigurationReader.h \
spep/config/impl/ConfigurationImpl.h \
spep/sessions/SessionCacheThread.h \
spep/sessions/SessionCache.h \
spep/sessions/PrincipalSession.h \
spep/sessions/UnauthenticatedSession.h \
spep/sessions/proxy/SessionCacheProxy.h \
spep/sessions/proxy/SessionCacheDispatcher.h \
spep/sessions/impl/SessionCacheImpl.h \
spep/startup/StartupProcessor.h \
spep/startup/proxy/StartupProcessorProxy.h \
spep/startup/proxy/StartupProcessorDispatcher.h \
spep/startup/impl/StartupProcessorImpl.h \
spep/ipc/SocketArchive.h \
spep/ipc/Dispatcher.h \
spep/ipc/MessageHeader.h \
spep/ipc/Serialization.h \
spep/ipc/Exceptions.h \
spep/ipc/Socket.h \
spep/ipc/Engine.h \
spep/logging/proxy/LoggerDispatcher.h \
spep/logging/proxy/LoggerProxy.h \
spep/Base64.h \
spep/SPEP.h \
spep/exceptions/SPEPStartupException.h \
spep/exceptions/MetadataException.h \
spep/exceptions/PEPException.h \
spep/exceptions/AuthnException.h \
spep/exceptions/InvalidSessionIdentifierException.h \
spep/exceptions/InvalidStateException.h \
spep/exceptions/InvalidRequestException.h \
spep/exceptions/WSException.h \
spep/exceptions/AttributeException.h \
spep/exceptions/InvalidResponseException.h \
spep/exceptions/KeyResolverException.h \
spep/exceptions/KeystoreException.h \
spep/metadata/Metadata.h \
spep/metadata/MetadataThread.h \
spep/metadata/KeyResolver.h \
spep/metadata/JKSKeystore.h \
spep/metadata/proxy/MetadataProxy.h \
spep/metadata/proxy/MetadataDispatcher.h \
spep/metadata/impl/MetadataImpl.h \
spep/UnicodeStringConversion.h \
spep/attribute/AttributeProcessorData.h \
spep/attribute/AttributeProcessor.h
