
sbin_PROGRAMS = spepd
spepd_SOURCES = Daemon.cpp Main.cpp StreamLogHandler.cpp
spepd_LDADD = -lboost_program_options$(BOOST_SUFFIX) -lcurl -lboost_regex$(BOOST_SUFFIX) -lesoesaml2 -lspep -lboost_thread$(BOOST_SUFFIX) -lboost_date_time$(BOOST_SUFFIX) -licuio -licule -liculx -licuuc -licui18n -licudata -licutu -lxerces-c -lxerces-depdom -lxml-security-c
