
bin_PROGRAMS = spepcpptest
spepcpptest_SOURCES = test.cpp main.cpp speptest/GlobalFixtures.cpp authn/AuthnProcessorTest.cpp speptest/MockWeb.cpp
spepcpptest_LDADD = -lboost_program_options$(BOOST_SUFFIX) -lcurl -lboost_regex$(BOOST_SUFFIX) -lsaml2 -lspep -lboost_thread$(BOOST_SUFFIX) -lboost_date_time$(BOOST_SUFFIX) -licuio -licule -liculx -licuuc -licui18n -licudata -licutu -lxerces-c -lxerces-depdom -lxml-security-c -lmicrohttpd
